# ChangeLog for media-sound/alsa-firmware
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-firmware/ChangeLog,v 1.64 2007/04/26 19:04:49 beandog Exp $

  26 Apr 2007; Steve Dibb <beandog@gentoo.org>
  alsa-firmware-1.0.14_rc2-r1.ebuild:
  amd64 stable, bug 175141

  22 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  alsa-firmware-1.0.14_rc2-r1.ebuild:
  x86 stable wrt #175141

  22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  alsa-firmware-1.0.14_rc2-r1.ebuild:
  ppc stable, bug #175141

  03 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  alsa-firmware-1.0.14_rc3.ebuild:
  Stable on sparc

*alsa-firmware-1.0.14_rc3 (17 Mar 2007)

  17 Mar 2007; Petteri Räty <betelgeuse@gentoo.org>
  +alsa-firmware-1.0.14_rc3.ebuild:
  Version bump. Thanks to Diego Pettenò <flameeyes@gmail.com>.

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  alsa-firmware-1.0.14_rc2-r1.ebuild:
  Keyworded ~sparc

  17 Feb 2007; Markus Rothe <corsair@gentoo.org>
  alsa-firmware-1.0.14_rc2-r1.ebuild:
  Added ~ppc64; bug #167294

  17 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  alsa-firmware-1.0.14_rc2-r1.ebuild:
  Add dependency on udev or really new version of alsa-tools for pcxhr card
  (pcxhrloader has been added with this revision); also add checks for the
  EchoAudio drivers or otherwise remove their firmware.

  17 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  alsa-firmware-1.0.14_rc2-r1.ebuild:
  For mixart and vx222, you can use either udev/hotplug or alsa-tools to load
  the firmware.

*alsa-firmware-1.0.14_rc2-r1 (17 Feb 2007)

  17 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/52-usx2yaudio.rules, +alsa-firmware-1.0.14_rc2-r1.ebuild:
  Use ALSA_CARDS variable to decide to install or not a series of firmwares;
  by doing this, we can also tweak the runtime dependency so that people
  asking for hdsp/hdspm will get alsa-tools (needed for hdsploader) and people