@@ -1,0 +1,3 @@
+MD5 3afce47b4277e64c224411fa29ea150c alsa-firmware-1.0.14rc3.tar.bz2 3084751
+RMD160 95215d31513b32e3827f7a31e7d9b299198892c8 alsa-firmware-1.0.14rc3.tar.bz2 3084751
+SHA256 fb06386f2af507511f0ae20a2cc37b726d53c61c423de2ec3714386699cff7aa alsa-firmware-1.0.14rc3.tar.bz2 3084751
